syntax = "proto3";
import "google/protobuf/empty.proto";
package replicamgrpb;

option go_package = "package/replicamgrpb";

message Shard {
    uint64 ShardId = 1;
    bool   IsLeader = 2;
    string LeaderKey = 3;
}
message Replica {
    string ReplicaName = 1;
    map<uint64, Shard> ShardMap = 2;
}

message ReplicaUpdateReq {
    Replica ReplicaInfo = 1;
}


message TxInfo {
      string HttpEndpoint = 1;
      string RpcEndpoint = 2;
}

message ReplicaInfo {
    string HttpEndpoint  = 1;
    string RpcEndpoint = 2;
}

message ReplicaTxReq {
    TxInfo TxInfo = 1;
    
}

message ShardInfo {
    map<uint64, Shard> ShardMap = 1;
}

message ReplicaQueryReq {}
message ReplicaQueryResp {
    TxInfo     TxInfo= 1;
    ShardInfo  ShardInfo=2;    
    ReplicaInfo ReplicaInfo=3;
 
}

service replicamgr {
    rpc ReplicaHeartbeat(ReplicaUpdateReq) returns (google.protobuf.Empty);
    rpc ReplicaTxLeaderHeartBeat(ReplicaTxReq) returns (google.protobuf.Empty);
    rpc ReplicaQuery(ReplicaQueryReq) returns (ReplicaQueryResp);
}
